# quickstart

./: .bumpversion.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy-pages.yml  github-actions-ci.yml  init.yml  pytest.yml  rename.yml  test.yml  upload-to-pipy.yml
doc/ADR/: ADR_31_07_2024_RUFF.md
sphinx/: conf.py  index.rst
sphinx/notebooks/: example_notebook.ipynb
sphinx/pages/: example_page.md
src/quickstart/: __init__.py  main.py
src/quickstart/divider/: __init__.py  divider.py  divider_error.py
tests/: test_divider.py  test_helloworld.py
tests/ignored/: test_ignored.py
tests/integration/: test_integration.py
tests/local/: test_local.py
tests/unit/: test_divider.py  test_helloworld.py
